syntax = "proto3";

package skysign_proto;

option java_package = "proto.skysign.event";
option java_multiple_files = true;
option go_package = ".;skysign_proto";

message CommunicationIdGaveEvent {
    string communicationId = 1;
    string version = 2;
}

message CommunicationIdRemovedEvent {
    string communicationId = 1;
    string version = 2;
}

message FlightplanCreatedEvent {
    string flightplan_id = 1;
}

message FlightplanCopiedEvent {
    string original_flightplan_id = 1;
    string new_flightplan_id = 2;
}

message FlightplanDeletedEvent {
    string flightplan_id = 1;
}

message VehicleCopiedWhenCopiedEvent {
    string original_vehicle_id = 1;
    string new_vehicle_id = 2;
}

message MissionCopiedWhenCopiedEvent {
    string original_mission_id = 1;
    string new_mission_id = 2;
}

message FlightoperationCreatedEvent {
    string flightoperation_id = 1;
    string flightplan_id = 2;
}

message FlightplanCopiedWhenFlightoperationCreatedEvent {
    string original_flightplan_id = 1;
    string new_flightplan_id = 2;
}
